--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -44,6 +44,12 @@
                 color: rgb(247, 247, 247);
                 text-decoration: none;
             }
+            .add {
+                text-decoration: none;
+            }
+            .ved {
+                text-decoration: none;
+            }
 
         </style>
 
