--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -16,6 +16,7 @@
     {% else %}
     <a href="{% url 'login' %}">Login</a>
     {% endif %} 
+    
 </div>
 
 
@@ -25,7 +26,7 @@
 <hr>
 
 <h1>My list {{color}}</h1>
-<a href="{% url 'task-create' %}">Add Task</a>
+<a class="add" href="{% url 'task-create' %}">Add Section</a>
 
 
 <form method="GET">
@@ -39,17 +40,22 @@
 
 <table>
     <tr>
-        <th>Item</th>
+        <th>Section</th>
         <th></th>
         <th></th>
     </tr>
     {% for task in tasks %}
+  
     <tr>
+        
         <td>{{task.title}}</td>
+       
         <td><a href="{% url 'task' task.id %}">View</a></td>
         <td><a href="{% url 'task-update' task.id %}">Edit</a></td>
         <td><a href="{% url 'task-delete' task.id %}">Delete</a></td>
+        
     </tr>
+    
     {% empty %}
         <h3>No items in list</h3>
     {% endfor %}
