func view og add button seclist

--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -1,7 +1,11 @@
 {% extends 'base/main.html' %}
 {% block content %}
+<h1 class="asm">ATTENDANCE SYSTEM MANAGEMENT</h1>
 
 
+<div class="header-bar">
+    
+</div>
 <h1>Login</h1>
 
 
