--- a/base/templates/base/main.html
+++ b/base/templates/base/main.html
@@ -8,7 +8,7 @@
         
         <style>
             body{
-                background-color: aqua;
+                background-color: #fff;
                 font-family: 'Nunito', sans-serif;
                 padding-top: 50px;
             }
@@ -22,13 +22,15 @@
                 {
                     font-family: 'Raleway', sans-serif;
                 }
-
+            .asm{
+                
+            }
             .container{
                 max-width: 550px;
                 margin: auto;
-                background-color: white;
+                background-color: rgb(145, 3, 3);
                 -webkit-box-shadow: 2px 2px 13px -4px rgba(0, 0, 0, 0.21);
-                box-shadow: 2px 2px 13px -14px rgba(0, 0, 0, 0.21);
+                box-shadow: 4px 4px 13px -14px rgba(0, 0, 0, 0.21);
                 
             }
 
@@ -38,7 +40,7 @@
                 color: #fff;
                 padding: 10px;
                 border-radius: 5px 5px 0 0;
-                background: linear-gradient(90deg, #EEA390 0%, #EB796F 43%, #EB796F 100%); 
+                background:  rgb(145, 3, 3); 
             }
             .header-bar a {
                 color: rgb(247, 247, 247);
